<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NavigationActivity"
    >

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/colorPrimaryDark"
        android:fontFamily="@font/roboto_light"
        android:gravity="center"
        android:text="@string/title_check_list"
        android:textColor="@color/colorPrimary"
        android:textSize="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView1"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:focusable="true"
        android:clickable="true"
        app:cardBackgroundColor="@color/quartz"
        app:cardCornerRadius="5dp"
        app:cardElevation="5dp"
        app:cardMaxElevation="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <TextView
            android:id="@+id/cardView1Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cv1title"
            android:textSize="15dp"
            android:fontFamily="@font/roboto_bold"
            android:layout_marginTop="10dp"
            android:layout_marginStart="5dp"
            />

        <TextView
            android:id="@+id/cardView1Body"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cv1body"
            android:fontFamily="@font/roboto_light"
            android:layout_marginTop="30dp"
            android:layout_marginStart="5dp"/>

        <TextView
            android:id="@+id/cardView1override"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/override"
            android:textColor="@color/red"
            android:layout_marginStart="5dp"
            android:layout_marginTop="80dp"
            android:clickable="true"
            android:onClick="overrideCard1"/>

        <Button
            android:id="@+id/cardView1verify"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/verify"
            android:layout_marginStart="255dp"
            android:layout_marginTop="65dp"
            android:onClick="startBarcodeActivity"/>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:focusable="true"
        android:clickable="true"
        app:cardBackgroundColor="@color/quartz"
        app:cardCornerRadius="5dp"
        app:cardElevation="5dp"
        app:cardMaxElevation="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView1">
        <TextView
            android:id="@+id/cardView2Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cv2title"
            android:textSize="15dp"
            android:fontFamily="@font/roboto_bold"
            android:layout_marginTop="10dp"
            android:layout_marginStart="5dp"
            />

        <TextView
            android:id="@+id/cardView2Body"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cv2body"
            android:fontFamily="@font/roboto_light"
            android:layout_marginTop="30dp"
            android:layout_marginStart="5dp"
            />

        <TextView
            android:id="@+id/cardView2override"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/override"
            android:textColor="@color/red"
            android:fontFamily="@font/roboto_bold"
            android:layout_marginStart="5dp"
            android:layout_marginTop="80dp"
            android:clickable="true"
            android:onClick="overrideCard2"
            />

        <Button
            android:id="@+id/cardView2verify"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/verify"
            android:layout_marginStart="255dp"
            android:layout_marginTop="65dp"
            android:onClick="startOCRActivity"/>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView3"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:focusable="true"
        android:clickable="true"
        app:cardBackgroundColor="@color/quartz"
        app:cardCornerRadius="5dp"
        app:cardElevation="5dp"
        app:cardMaxElevation="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView2">
        <TextView
            android:id="@+id/cardView3Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cv3title"
            android:textSize="15dp"
            android:fontFamily="@font/roboto_bold"
            android:layout_marginTop="10dp"
            android:layout_marginStart="5dp"
            />

        <TextView
            android:id="@+id/cardView3Body"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cv3body"
            android:fontFamily="@font/roboto_light"
            android:layout_marginTop="30dp"
            android:layout_marginStart="5dp"
            />

        <TextView
            android:id="@+id/cardView3override"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/override"
            android:textColor="@color/red"
            android:fontFamily="@font/roboto_bold"
            android:layout_marginStart="5dp"
            android:layout_marginTop="80dp"
            android:clickable="true"
            android:onClick="overrideCard3"
            />

        <Button
            android:id="@+id/cardView3verify"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/verify"
            android:layout_marginStart="255dp"
            android:layout_marginTop="65dp"
            android:onClick="startTFActivity"
            />
    </androidx.cardview.widget.CardView>


    <Button
        android:id="@+id/proceed_button"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/button_rounded_corners"
        android:text="@string/done"
        android:textColor="@color/colorPrimary"
        android:onClick="validateAllCards"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>